Fix next_list link in pagination on small screen devices. Previous and next page links in pagination are now hidden on small screen devices; first and last page links now have rounded corners on small screen devices.

--- a/rsc/less/bootstrap-blog_base.less
+++ b/rsc/less/bootstrap-blog_base.less
@@ -30,8 +30,23 @@ li[class^="listnav_distance_"], li[class*=" listnav_distance_"] {
 	}
 
 	// hide .nav_next_list and .nav_prev_list on this screen size
-	li.nav_prev_list, li.nav_next_list {
+	li.listnav_prev_list, li.listnav_next_list {
 		display: none;
+	}
+
+	// hide .listnav_prev and .listnav_next on small screens
+	li.listnav_prev, li.listnav_next {
+		display: none;
+	}
+
+	li.listnav_first > a {
+		border-top-left-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
+
+	li.listnav_last > a {
+		border-top-right-radius: 4px;
+		border-bottom-right-radius: 4px;
 	}
 }
 
